<resources>
    <string name="app_name">GoudaNough</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ALERT DIALOG STRINGS -->
    <string name="alert_positive"> Got it!</string>
    <string name="alert_negative">Nope!</string>
    <string name="alert_default_header">Gouda-Nuff</string>
    <string name="alert_default_content">Oops! Something went blue cheese bad</string>
    <string name="resto_info_name">Restaurant Name</string>
    <string name="resto_info_cuisine">Cuisine</string>
    <string name="resto_info_price_range">$$$$ $$$ $$ $</string>
    <string name="resto_info_url">https://www.restaurant.com/menu</string>
    <string name="resto_info_telephone">514-559-7108</string>
    <string name="resto_info_list_header">Reviews/Suggested Restaurants</string>
    <string name="about">About</string>
    <string name="dawson">Dawson</string>
    <string name="settings">Settings</string>
    <string name="login_username">Username:</string>
    <string name="login_user_hint">login</string>

    <string name="resto_telephone_lbl">Phone</string>
    <string name="save_btn_lbl">Save</string>
    <string name="cancel_btn_lbl">Cancel</string>
    <string name="prompt_addr_num">Street#</string>
    <string name="prompt_addr_nam">Street Name</string>
    <string name="prompt_addr_cit">City</string>
    <string name="prompt_addr_pos">Postal Code</string>

    <string-array name="price_range_spin">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="rating_spin">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
